<resources>
    <string name="app_name">极豹数据</string>

    <string name="title_login">login</string>
    <string name="title_web">web</string>
    <string name="title_home">home</string>
    <string name="title_register">register</string>
    <string name="title_data">data</string>
    <string name="title_my">my</string>
    <string name="title_pay">pay</string>


    <string name="bottom_home">基础数据</string>
    <string name="bottom_data">核心数据</string>
    <string name="bottom_my">个人中心</string>


    <string name="login_empty_phone">账号不能为空</string>
    <string name="login_empty_pass">密码不能为空</string>
    <string name="login_title">密码登录</string>
    <string name="login_phone_hint">账号:</string>
    <string name="login_password_hint">密码:</string>
    <string name="login_btn">登录</string>
    <string name="login_register">注册</string>

    <string name="register_title">注册</string>
    <string name="register_toast">注册成功</string>
    <string name="register_phone_hint">账号</string>
    <string name="register_password_hint">密码</string>
    <string name="register_btn">确认注册</string>
    <string name="register_invite">邀请人(可空):</string>
    <string name="register_tip">第一次登录将与手机进行绑定邀请码为对方用户名，可空</string>
    <string name="register_tip1">同意极豹数据用户协议、免责声明与隐私政策</string>

    <string name="my_tip">账号：</string>
    <string name="my_tip1">会员到期日：</string>
    <string name="my_tip2">邀请我的人：</string>
    <string name="my_tip3">我的邀请码：</string>

    <string name="my_logout">退出登录</string>
    <string name="my_btn">续费会员</string>

    <string name="data_tip">北京时间</string>
    <string name="data_tip1">人民币</string>
    <string name="data_tip2">市场挂单数量</string>
    <string name="data_tip3">今开</string>
    <string name="data_tip4">昨收</string>
    <string name="data_tip5">最高</string>
    <string name="data_tip6">最低</string>
    <string name="data_tip7">买入数量</string>
    <string name="data_tip8">股</string>
    <string name="data_tip9">请输入</string>
    <string name="data_tip10">买入总金额</string>
    <string name="data_tip11">元</string>
    <string name="data_tip12">账号等级</string>
    <string name="data_tip13">期权可卖数量</string>
    <string name="data_tip14">实际期权成本</string>
    <string name="data_tip15">元/股</string>
    <string name="data_tip16">是否开启通知栏</string>
    <string name="data_tip17">是否开启开盘提醒</string>
    <string name="data_tip18">是否开启收盘提醒</string>
    <string name="data_tip19">是</string>
    <string name="data_tip20">否</string>
    <string name="data_tip21">实时</string>
    <string name="data_tip22">涨跌</string>
    <string name="data_notify1">嗷呜～小豹子提醒您，今日数据分析要开始喽！</string>
    <string name="data_notify2">嗷呜～小豹子提醒您，今日数据分析要结束啦！</string>

    <string name="data_btn">充值会员</string>
    <string name="data_btn1">开始计算</string>
    <string name="data_cal_tip">成本计算器</string>

    <string name="data_flow">是否开启浮窗</string>
    <string name="data_enter">是</string>
    <string name="data_no">否</string>

    <string name="data_time_tip">体验时长</string>


    <string name="home_tip1">万股期权分佣</string>
    <string name="home_tip2">阅读值分佣</string>
    <string name="home_tip3">96赞友卡分佣</string>
    <string name="home_tip4">走势图</string>
    <string name="home_today_lable">Date</string>
    <string name="home_format1">%s/%s</string>

    <string name="pay_title">选择商品</string>
    <string name="pay_tip">半年卡</string>
    <string name="pay_tip1">年卡</string>
    <string name="pay_tip2">原价299&#160;首充</string>
    <string name="pay_tip3">原价599&#160;首充</string>
    <string name="pay_tip4">首充</string>
    <string name="pay_tip5">折&#160;&#160;</string>
    <string name="pay_tip6">联系方式：</string>
    <string name="pay_tip7">【必填】推荐填写QQ号或手机号</string>
    <string name="pay_tip8">支付方式：</string>
    <string name="pay_tip9">支付宝</string>
    <string name="pay_tip10">微信</string>
    <string name="pay_tip11">请输入您的联系方式</string>
    <string name="pay_tip12">￥</string>
    <string name="pay_btn">支付</string>
    <string name="pay_error">支付失败</string>
    <string name="pay_contact_empty">联系方式不能为空</string>

    <string name="mark_time">时间</string>
    <string name="mark_max">高</string>
    <string name="mark_min">低</string>
    <string name="mark_now">当前</string>

    <string name="privacy_title">用户协议</string>
    <string name="privacy_tip">请同意用户协议</string>

</resources>