<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="com.shares.app.ui.PayViewModel" />


    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ff7f9f7"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/pay_top">

            <LinearLayout
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical|left"
                    android:onClick="@{()->vm.goBack()}"
                    android:src="@drawable/title_left_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/pay_title"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>
        </FrameLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-60dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/fwhite_15"
                    android:orientation="vertical"
                    android:paddingStart="15dp"
                    android:paddingTop="22dp"
                    android:paddingEnd="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@{vm.selectType==0?@drawable/pay_item_select_bg:@drawable/pay_item_no_select_bg}"
                            android:gravity="center"
                            android:onClick="@{()->vm.chooseType(0)}"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/pay_tip"
                                    android:textColor="@{vm.selectType==0?@color/white:@color/bottom}"
                                    android:textSize="16dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="3dp"
                                    android:text="@string/pay_tip2"
                                    android:textColor="@{vm.selectType==0?@color/white:@color/fff8b20}"
                                    android:textSize="18dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="3dp"
                                    android:text="@{@string/pay_tip4+vm.priceRate+@string/pay_tip5+vm.price}"
                                    android:textColor="@{vm.selectType==0?@color/white:@color/f878e91}"
                                    android:textSize="12dp" />
                            </LinearLayout>

                            <ImageView
                                isInvisible="@{vm.selectType==1}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/pay_select_icon" />
                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:background="@{vm.selectType==1?@drawable/pay_item_select_bg:@drawable/pay_item_no_select_bg}"
                            android:gravity="center"
                            android:onClick="@{()->vm.chooseType(1)}"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/pay_tip1"
                                    android:textColor="@{vm.selectType==1?@color/white:@color/bottom}"
                                    android:textSize="16dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="3dp"
                                    android:text="@string/pay_tip3"
                                    android:textColor="@{vm.selectType==1?@color/white:@color/fff8b20}"
                                    android:textSize="18dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="3dp"
                                    android:text="@{@string/pay_tip4+vm.priceRate1+@string/pay_tip5+vm.price1}"
                                    android:textColor="@{vm.selectType==1?@color/white:@color/f878e91}"
                                    android:textSize="12dp" />
                            </LinearLayout>

                            <ImageView
                                isInvisible="@{vm.selectType==0}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/pay_select_icon" />
                        </FrameLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/pay_tip6"
                            android:textColor="@color/black"
                            android:textSize="16dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pay_tip7"
                            android:textColor="@color/f99a4ab"
                            android:textSize="12dp" />


                    </LinearLayout>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/f7f9f7_10"
                        android:hint="@string/pay_tip11"
                        android:padding="17dp"
                        android:singleLine="true"
                        android:text="@={vm.contact}"
                        android:textColor="@color/black"
                        android:textColorHint="@color/fccd1cc"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pay_tip8"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/my_item_bg"
                        android:gravity="center_vertical"
                        android:onClick="@{()->vm.choose(0)}"
                        android:orientation="horizontal"
                        android:paddingStart="20dp"
                        android:paddingTop="13dp"
                        android:paddingEnd="17dp"
                        android:paddingBottom="13dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/pay_alipay"
                            android:drawablePadding="10dp"

                            android:padding="8dp"
                            android:text="@string/pay_tip9"
                            android:textColor="@color/f333333"
                            android:textSize="16dp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@{vm.selectIndex==0?@drawable/pay_choose:@drawable/pay_no_choose}" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="22dp"
                        android:background="@drawable/my_item_bg"
                        android:gravity="center_vertical"
                        android:onClick="@{()->vm.choose(1)}"
                        android:orientation="horizontal"
                        android:paddingStart="20dp"
                        android:paddingTop="13dp"
                        android:paddingEnd="17dp"
                        android:paddingBottom="13dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/pay_wx"
                            android:drawablePadding="10dp"
                            android:padding="8dp"
                            android:text="@string/pay_tip10"
                            android:textColor="@color/f333333"
                            android:textSize="16dp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@{vm.selectIndex==1?@drawable/pay_choose:@drawable/pay_no_choose}" />
                    </LinearLayout>

                </LinearLayout>


                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:backgroundTint="@color/bottom_check"
                    android:gravity="center"
                    android:onClick="@{()->vm.goPay()}"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/pay_btn"
                    android:textColor="#ffffff"
                    android:textSize="16dp"
                    app:cornerRadius="60dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>