<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.shares.app.ui.LineViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.github.wangyiqian.stockchart.StockChart
            android:id="@+id/stock_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            isGone="@{vm.hideHight}"
            android:id="@+id/market"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/marker_bg"
            android:minWidth="140dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/mark_time"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/marker_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@{vm.nowTime}"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/mark_max"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/marker_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@{vm.nowHigh}"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/mark_min"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/marker_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@{vm.nowLow}"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/mark_now"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/marker_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@{vm.nowPrice}"
                    android:textColor="@color/white"
                    android:textSize="12dp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>
