<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="com.shares.app.MainActivity" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/page_bg">

        <LinearLayout
            android:id="@+id/nav_view"
            isGone="@{vm.isHide}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/bottom_bg"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="@{() -> vm.goHome()}"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bottom_sport_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="2dp"
                    android:drawableTop="@{vm.index==0?@drawable/bottom_home_p:@drawable/bottom_home}"
                    android:text="@string/bottom_home"
                    android:textColor="@{vm.index==0?@color/bottom_check:@color/bottom}"
                    android:textSize="11dp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="@{() -> vm.goData()}"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/bottom_order_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom_data"
                    android:drawablePadding="2dp"
                    android:drawableTop="@{vm.index==1?@drawable/bottom_data_p:@drawable/bottom_data}"
                    android:textColor="@{vm.index==1?@color/bottom_check:@color/bottom}"
                    android:textSize="11dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="@{() -> vm.goMy()}"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom_my"
                    android:drawablePadding="2dp"
                    android:drawableTop="@{vm.index==2?@drawable/bottom_my_p:@drawable/bottom_my}"
                    android:textColor="@{vm.index==2?@color/bottom_check:@color/bottom}"
                    android:textSize="11dp" />
            </LinearLayout>

        </LinearLayout>

        <fragment
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toTopOf="@id/nav_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>